[tool.poetry]
name = "snakes-cafe"
version = "0.1.0"
description = ""
authors = ["Prudvi Reddy Puchakayala <prudvip@amazon.com>"]

[tool.poetry.dependencies]
python = "^2.7"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
